added  anew method to country
